** New: Added Personal Interrupt Trigger for Death Blow alerts. Requires the target to be focused or targeted by the player.
** New: Added Unit tracking for Warforged Thrall. (see below)
** New: Added Personal Alert for Burning Sacrifice.
** New: Added global timer for Burning Sacrifice.
** New: Added Mechanic Spy object for Burning Sacrifice.
** Change: Trigger for Wanton Sacrifice changed from Blazing Thrall to Warforged Thrall.
* The Ember Conclave
** New: Each boss now has an adjustable castbar. (This will mean you'll need to set these up once)
** Fixed: The encounter will now only credit completion when all three bosses are dead, not just Szath.
** Fixed: Error on Encounter start for Nahoth.
** Fixed: Ereetu was forgetting where he is and triggering this encounter in FoLH.

Hammerknell Fortress
* Soulrender Zilas
** Change: Imp's Cede Spirit is now a Personal Interrupt alert, rather than global. Requires target/focus to trigger.

River of Souls
* Herald Gaurath
** New: Added Unit tracking for Ancient Defiler
** New: Added personal interrupt alert for Defiling Storm.
** New: Added personal interrupt success alert cancel for Defiling Storm.

Expert Dungeons
* Fall of Lantern Hook
** Roft
*** Fixed: This encounter will only end when Roft and his three dogs have been killed.

German Translations
* Additions for latest ID dictionary. (First cycle)

French Translations
* Fixes and additions.

----
v1.0.1

Rift Version
* Updated: v1.8

Locale Manager
* Removed Global variable reference

Messenger System
* New: Module added to manage KBM to KBM messaging.
 
Engine
* Events
** New: UnitID, Relation = Unit.Relation() - Event for managing Unit Relation changes.
* Unit Tracking
** Change: Units which could have a false (boolean) or "" (empty string) value for .name are now handled better.
** Fixed: The Unit tracking system should now work far more smoothly with Rift v1.8.

Tank-Swap